2006-03-01  Eric Seidel  <eseidel@apple.com>

        Reviewed by mjs.

        Fix win32 build, add IntRectWin and GraphicsContextCairo stub.

        * Viewer/ImageDocument.cpp:
        * Viewer/ImageMainFrame.cpp:
        * WebCore.vcproj/WebCore/WebCore.vcproj:
        * platform/IntRect.h:
        * platform/cairo/GraphicsContextCairo.cpp: Added.
        * platform/win/TemporaryLinkStubs.cpp:
        (GraphicsContext::drawLineForText):
        (WebCore::GraphicsContext::fillRect):
        (WebCore::TransferJob::TransferJob):
        (GraphicsContext::GraphicsContext):
        (WebCore::GraphicsContext::~GraphicsContext):

2006-02-23  David Harrison  <harrison@apple.com>

        Reviewed by Justin.

        <rdar://problem/4359736> Support outlining ability with lists

        Added Mail SPI for list level changes.  It is SPI because it is not complete support
        for outlining.  See <rdar://problem/4457070> "API for html lists as note outlines".
        Additional support is to end a list when return is typed on empty list item.

        * WebCore.vcproj/WebCore/WebCore.vcproj:
        * WebCore.xcodeproj/project.pbxproj:
        Added ModifySelectionListLevelCommand.cpp and ModifySelectionListLevelCommand.h
        
        * bridge/mac/WebCoreFrameBridge.h:
        * bridge/mac/WebCoreFrameBridge.mm:
        (-[WebCoreFrameBridge canIncreaseSelectionListLevel]):
        (-[WebCoreFrameBridge canDecreaseSelectionListLevel]):
        (-[WebCoreFrameBridge increaseSelectionListLevel]):
        (-[WebCoreFrameBridge decreaseSelectionListLevel]):
        Supply list level calls in the bridge.
        
        * editing/InsertParagraphSeparatorCommand.cpp:
        (WebCore::createListItemElement):
        New.  Creates an li.
        
        (WebCore::InsertParagraphSeparatorCommand::doApply):
        - slight logic cleanup
        - on empty list item, end the list
        
        * editing/ModifySelectionListLevelCommand.cpp: Added.